--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -8,4 +8,12 @@
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+
+## Load Notification Daemon
+exec-once = swaync
+
+## Autostart waybar
+exec-once = ~/.config/waybar/launch.sh
+
+## Autostart hyprpaper
+exec-once = hyprpaper
