--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,35 +1,32 @@
 {
     // General Settings
     "layer": "top",
-    "margin-top": 0,
+    "margin-top": 8,
     "margin-bottom": 0,
-    "margin-left": 0,
-    "margin-right": 0,
+    "margin-left": 8,
+    "margin-right": 8,
     "spacing": 0,
     // Load Modules
     "include": [
-        "~/.config/waybar/quicklinks.json",
         "~/.config/waybar/modules.json"
     ],
     // Modules Left
     "modules-left": [
-        "custom/appmenu",
+        "custom/appmenuicon",
         "hyprland/workspaces",
-        //"wlr/taskbar",
-        //"group/quicklinks",
-        //"custom/nowplaying",        
+        "custom/nowplaying",        
         "custom/empty"
     ],
     // Modules Center
     "modules-center": [
-        "hyprland/window",
+        "clock",
         "custom/empty"
     ],
     // Modules Right    
     "modules-right": [
         "custom/updates",
         "pulseaudio",
-        //"backlight",
+        "backlight",
         "bluetooth",
         "network",
         "battery",
@@ -38,7 +35,5 @@
         "tray",
         "custom/notification",
         "custom/exit",
-        "custom/ml4w-welcome",
-        "clock"
     ]
 }
