Added hyprlock to hypr keybinds

--- a/.config/hypr/conf/keybinds.conf
+++ b/.config/hypr/conf/keybinds.conf
@@ -12,13 +12,12 @@ $menu = rofi -show drun
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod, C, killactive
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, V, togglefloating
 bind = $mainMod, F, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, J, togglesplit
+bind = $mainMod, L, exec, hyprlock 
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
