--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,13 +1,6 @@
-
 # -----------------------------------------------------
 # Cache/Wallpaper Folder
 # -----------------------------------------------------
-cache_folder="~/.config/hypr/background"
-
-# -----------------------------------------------------
-# Source Colors
-# -----------------------------------------------------
-source="$HOME/.config/hypr/colors/colors.conf"
 
 # -----------------------------------------------------
 # General settings
@@ -21,7 +14,7 @@ general {
 # -----------------------------------------------------
 background {
     monitor =
-    path = "$cache_folder/wolf.png"   # only png supported for now
+    path = /home/sean/.config/hypr/background/wolf.png
 }
 
 # -----------------------------------------------------
@@ -34,18 +27,18 @@ input-field {
     dots_spacing = 0.15
     dots_center = true
     dots_rounding = -1
-    inner_color = $primary
-    font_color = $on_primary
+    inner_color = rgba(ffb59dff)
+    font_color = rgba(55200cff)
     font_family = Fira Semibold
-    outer_color = $on_primary
+    outer_color = rgba(55200cff)
     outline_thickness = 3
     fade_on_empty = true
     fade_timeout = 1000
     placeholder_text = <i>Input Password...</i>
     hide_input = false
     rounding = 10
-    check_color = $primary
-    fail_color = $error
+    check_color = rgba(ffb59dff)
+    fail_color = rgba(ffb4abff)
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
     capslock_color = -1
     numlock_color = -1
@@ -57,7 +50,7 @@ input-field {
     valign = center
     shadow_passes = 10
     shadow_size = 20
-    shadow_color = $shadow
+    shadow_color = rgba(000000ff)
     shadow_boost = 1.6
 }
 
@@ -67,7 +60,7 @@ input-field {
 label {
     monitor =
     text = cmd[update:1000] echo "$TIME"
-    color = $primary
+    color = rgba(ffb59dff)
     font_size = 70
     font_family = Fira Sans Semibold
     position = -50, 20
@@ -80,33 +73,12 @@ label {
 label {
     monitor =
     text = $USER
-    color = #ffffff
+    color = rgba(ffb59dff)
     font_size = 20
     font_family = Fira Sans Semibold
     position = -50, 120
     halign = right
-    valign = botto
+    valign = bottom
     shadow_passes = 5
     shadow_size = 10
-}
-
-# -----------------------------------------------------
-# Image (Optional User Avatar / Wallpaper Accent)
-# -----------------------------------------------------
-image {
-    monitor =
-    path = "$cache_folder/square_wallpaper.png"
-    size = 280
-    rounding = 40
-    border_size = 4
-    border_color = $primary $on_primary 90deg
-    rotate = 0
-    reload_time = -1
-    position = 0, 200
-    halign = center
-    valign = center
-    shadow_passes = 10
-    shadow_size = 20
-    shadow_color = $shadow
-    shadow_boost = 1.6
 }
